# sm-conformance

./: .gitattributes  CHANGELOG.md  GOVERNANCE.md  PUBLISHING.md  README.md  SPEC.md  THREATMODEL.md  WHITEPAPER.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: demo.py
sm_conformance/: __init__.py  _badge_vector_gen.py  badge.py  countersign.py  verify_badge.py
sm_conformance/schema/: common.schema.json  conformance-envelope.schema.json  counter-signed-envelope.schema.json
sm_conformance/vectors/: canonicalization.json
tests/: test_badge.py  test_badge_vectors.py  test_canonicalization_vectors.py  test_countersign.py  test_hardening.py
tests/fixtures/: failing-run.json  missing-signature.json  non-didkey-signer.json  tampered-payload.json  tampered-signature.json  valid-signed-badge.json  wrong-signer.json
